--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 annotated-types==0.6.0
+coverage==7.4.4
 exceptiongroup==1.2.0
 iniconfig==2.0.0
 packaging==24.0
@@ -7,5 +8,6 @@ pydantic==2.6.4
 pydantic_core==2.16.3
 PyDispatcher==2.0.7
 pytest==8.1.1
+pytest-cov==5.0.0
 tomli==2.0.1
 typing_extensions==4.10.0
