--- a/requirements.txt
+++ b/requirements.txt
@@ -22,6 +22,7 @@ pydantic==2.6.4
 pydantic_core==2.16.3
 Pygments==2.17.2
 pytest==8.1.1
+pytest-asyncio==0.23.6
 pytest-cov==5.0.0
 readme_renderer==43.0
 requests==2.31.0
